[package]
name = "mechanics-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "any", "mysql", "postgres"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.149"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
